[package]
name = "fluvio-client-wasm"
version = "0.9.0"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["unstable"]
unstable = []

[dependencies]
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.31", features = ["futures-core-03-stream"] }
fluvio = { version = "0.13", features = ["unstable"] }
console_log = { version = "0.2", features = ["color"] }
js-sys = "0.3.58"
web-sys = {version = "0.3.58" }
tokio-stream = "0.1.9"
tracing = "0.1.34"
fluvio-future = { version = "0.4", features = ["net"] }
ws_stream_wasm = "0.7.3"
async-trait = { version = "0.1.57"}
tracing-wasm = "0.2.1"
futures-util = { version = "0.3", features = ["io"]}
log = "0.4"
base64 = "0.13.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }

thiserror = "1.0.34"

[dev-dependencies]
wasm-bindgen-test = "0.3.31"

# https://rustwasm.github.io/docs/book/reference/code-size.html#optimizing-builds-for-code-size
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-Os']

# [patch.crates-io]
# fluvio = { git = "https://github.com/infinyon/fluvio", branch = "master" }
