[package]
name = "fluvio-websocket-proxy"
version = "0.1.0"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide-websockets = "0.4.0"
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
serde = "1.0.126"

env_logger = "0.8.3"
async-std = { version = "1.9.0", features = ["attributes"] }
tokio = { version = "1.3.0", features = ["macros"] }
fluvio-future = { version = "0.3.8", features = ["net"] }
fluvio = { git = "https://github.com/infinyon/fluvio" }
