[package]
name = "fluvio-websocket-proxy"
version = "0.1.0"
authors = ["Sebastian Imlay <sebastian.imlay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide-websockets = "0.4.0"
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
serde = "1.0.145"

env_logger = "0.9.0"
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1.21.1", features = ["macros"] }
fluvio-future = { version = "0.4.2", features = ["net"] }
fluvio = "0.12"
